--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Strona główna{% endblock %}
+{% block title %}Main Page{% endblock %}
 
 {% block content %}
 
