--- a/src/templates/pastes/create_paste.html
+++ b/src/templates/pastes/create_paste.html
@@ -13,6 +13,7 @@
 					{{form.content.label}}
 				</legend>
 				<div class="form-group">
+					{{form.content.errors}}
 					<div class="col-lg-12">
 						{{form.content|add_class:"form-control"|add_class:"no-resize"}}
 					</div>
@@ -21,24 +22,28 @@
 					Settings
 				</legend>
 				<div class="form-group">
+					{{form.title.errors}}
 					<label for="inputEmail" class="col-lg-3 control-label">{{form.title.label}}:</label>
 					<div class="col-lg-3">
 					{{form.title|add_class:"form-control"}}
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="select" class="col-lg-3 control-label">{{form.syntax.label}}:</label>
+					{{form.language.errors}}
+					<label for="select" class="col-lg-3 control-label">{{form.language.label}}:</label>
 					<div class="col-lg-3">
-						{{form.syntax|add_class:"form-control"}}
+						{{form.language|add_class:"form-control"}}
 					</div>
 				</div>
 				<div class="form-group">
+					{{form.expiration.errors}}
 					<label for="select" class="col-lg-3 control-label">{{form.expiration.label}}:</label>
 					<div class="col-lg-3">
 						{{form.expiration|add_class:"form-control"}}
 					</div>
 				</div>
 				<div class="form-group">
+					{{form.visibility.errors}}
 					<label for="select" class="col-lg-3 control-label">{{form.visibility.label}}:</label>
 					<div class="col-lg-3">
 						{{form.visibility|add_class:"form-control"}}
