--- a/src/static/css/bootstrap-extend.css
+++ b/src/static/css/bootstrap-extend.css
@@ -13,3 +13,16 @@
 .list-group-item-caption {
 	font-size: 0.87em
 }
+
+.comment-author {
+	font-weight: bold;
+}
+
+.comment-date {
+	color: #AAAAAA;
+	margin: 0px 0px 0px 10px;
+}
+
+.comment-reply {
+	margin: 0px 0px 0px 10px;
+}
