--- a/src/templates/pastes/comments.html
+++ b/src/templates/pastes/comments.html
@@ -5,46 +5,28 @@
 		</div>
 	</div>
 </div>
-<div class="row">
-	<div class="col-lg-12">
-		<div class="well col-lg-12">
-			Comment #1
+
+{% load html_utils %}
+{% load mptt_tags %}
+{% load humanize %}
+
+{% recursetree nodes %}
+	<div class="row">
+		<div class='col-lg-{{ "12"|subtract:node.level }} col-lg-offset-{{ node.level }}'>
+			<div class="well col-lg-12">
+				<p>
+					<span class="comment-author"><a href="#">{{ node.author.username }}</a></span>
+					<span class="comment-date">{{ node.created|naturaltime }}</span>
+					<span class="comment-reply"><a href="#">reply</a></span>
+				</p>
+				{{ node.content }}
+			</div>
 		</div>
 	</div>
-</div>
-<div class="row">
-	<div class="col-lg-12">
-		<div class="well col-lg-12">
-			Comment #1
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-lg-12">
-		<div class="well col-lg-12">
-			Comment #2
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-lg-12">
-		<div class="well col-lg-11 col-lg-offset-1">
-			Comment #2.2
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-lg-12">
-		<div class="well col-lg-10 col-lg-offset-2">
-			Comment #2.2.1
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-lg-12">
-		<div class="well col-lg-12">
-			Comment #3
-		</div>
-	</div>
-</div>
-</div>
+	
+	{% if not node.is_leaf_node %}
+		{{ children }}
+	{% endif %}
+
+{% endrecursetree %}
+
