--- a/src/templates/users/user_pastes.html
+++ b/src/templates/users/user_pastes.html
@@ -20,56 +20,7 @@
 			<p>Joined: {{ user_profile.date_joined | naturaltime }} | Total pastes: {{ total_pastes }}</p>
 		</div>
 	</div>
-	{% if paste_list %}
-		<div class="row">
-			<div class="col-lg-12">
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>Name</th>
-							<th>Added</th>
-							<th>Expires</th>
-							<th>Hits</th>
-						</tr>
-					</thead>
-					<tbody>
-						{% for paste in paste_list %}
-							<tr>
-								<td><i class="fa fa-unlock"></i> <a href="#">{{ paste.title }}</a></td>
-								<td>{{ paste.created | naturaltime }}</td>
-								<th>{{ paste.expire_date | naturaltime }}</th>
-								<td>{{ paste.hits }}</td>
-							</tr>
-						{% endfor %}
-					</tbody>
-				</table>
-			</div>
-		</div>
-		
-		{% if is_paginated %}
-			<ul class="pagination pagination-sm">
-		    {% if page_obj.has_previous %}
-		      <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
-		    {% else %}
-		      <li class="disabled"><a href="#">&laquo;</a></li>
-		    {% endif %}
-		
-		    {% for num in page_obj.paginator.page_range %}
-		      {% ifequal num page_obj.number %}
-		        <li class="active"><a href="#">{{ num }}<span class="sr-only">(current)</span></a></li>
-		      {% else %}
-		        <li><a href="?page={{ num }}">{{ num }}</a></li>
-		      {% endifequal %}
-		    {% endfor %}
-		
-		    {% if page_obj.has_next %}
-		      <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
-		    {% else %}
-		      <li class="disabled"><a href="#">&raquo;</a></li>
-		    {% endif %}
-		  <ul>
-		{% endif %}
-	{% endif %}
+	{% include "pastes/paste_list.html" with enable_editing=True %}
 </div>
 
 {% endblock %}
