--- a/src/templates/pastes/modify_paste.html
+++ b/src/templates/pastes/modify_paste.html
@@ -14,7 +14,7 @@ Create new paste
 
 	<div class="well bs-component">
 		<form class="form-horizontal" method="POST"> {% csrf_token %}
-			{% include "danger_messages.html" with errors=form.non_field_errors %}
+			{% include "messages.html" with messages=form.non_field_errors type='danger' %}
 			<fieldset>
 				<legend>
 					{% if form.instance.pk %}
