--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -104,5 +104,22 @@
 
 		<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 		<script src="{% static "js/bootstrap.min.js" %}"></script>
+		<script>
+			$( document ).ready(function() {
+				$(".comment-reply a").click(function() {
+					var parent = $(this).parents('.comment-row');
+					$('#comment_form').insertAfter(parent);
+					$('input[id=id_parent]').val(pasrseInt(this.id.replace('node_', '')));
+					$('#cancel_reply').css('display', 'inline-block');
+					return false;
+				});
+				$('#cancel_reply').click(function() {
+					$('#comment_form').insertAfter('#comments_tree');
+					$('input[id=id_parent]').val('');
+					$('#cancel_reply').css('display', 'none');
+					return false;
+				});
+			});
+		</script>
 	</body>
 </html>
