--- a/src/templates/pastes/paste.html
+++ b/src/templates/pastes/paste.html
@@ -10,13 +10,13 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="page-header no-margin-top">
-					<h3 class="no-margin-top">Paste</h3>
+					<h3 class="no-margin-top">{{paste.title}}</h3>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				Paste here
+				{{paste.content}}
 			</div>
 		</div>
 		{% include "pastes/comments.html" %}
