Correct cron, correct recent pastes, fix views,

--- a/src/templates/users/login.html
+++ b/src/templates/users/login.html
@@ -19,6 +19,7 @@
 						<button type="submit" class="btn btn-primary">
 							Submit
 						</button>
+						<a href="{% url "password_reset_recover" %}" class="btn btn-default">Forgotten passowrd?</a>
 						<input type="hidden" name="next" value="/" />
 					</div>
 				</div>
