--- a/src/templates/pastes/delete_paste.html
+++ b/src/templates/pastes/delete_paste.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 {% load widget_tweaks %}
+
 	<div class="well bs-component">
 		<form method="post" class="form-horizontal">{% csrf_token %}
 			<fieldset>
@@ -17,6 +18,9 @@
 						<button type="submit" class="btn btn-danger">
 							Yes
 						</button>
+						<a class="btn btn-default" href="{% url "show_paste" object.pk %}">
+							No
+						</a>
 					</div>
 				</div>
 			</fieldset>
