--- a/src/templates/pastes/modify_paste.html
+++ b/src/templates/pastes/modify_paste.html
@@ -23,20 +23,20 @@ Create new paste
 						New paste
 					{% endif %}
 				</legend>
-				<div class="form-group">
-					<div class="col-lg-12">
+				<div class="form-group {{ form.content.errors|yesno:"has-error," }}">
+					<div class="col-lg-9">
 						{{form.content|add_class:"form-control"|add_class:"no-resize"}}
-						{% include "simple_messages.html" with errors=form.content.errors %}
+						{% include "simple_messages.html" with errors=form.content.errors %}	
 					</div>
 				</div>
 				<legend>
 					Settings
 				</legend>
-				<div class="form-group">
+				<div class="form-group {{ form.title.errors|yesno:"has-error," }}">
 					<label for="inputEmail" class="col-lg-3 control-label">{{form.title.label}}:</label>
 					<div class="col-lg-3">
-						{{form.title|add_class:"form-control"}}
-						{% include "simple_messages.html" with errors=form.title.errors %}
+						{{form.title|add_class:"form-control"|add_class:"no-resize"}}
+						{% include "simple_messages.html" with errors=form.title.errors %}	
 					</div>
 				</div>
 				<div class="form-group">
