--- a/src/templates/users/registration.html
+++ b/src/templates/users/registration.html
@@ -17,7 +17,7 @@
 				<div class="form-group">
 					<div class="col-lg-10 col-lg-offset-3">
 						<button type="submit" class="btn btn-primary">
-							Submit
+							Register
 						</button>
 					</div>
 				</div>
