--- a/src/templates/pastes/comments.html
+++ b/src/templates/pastes/comments.html
@@ -14,48 +14,39 @@
 {% load widget_tweaks %}
 <section id="comments_tree">
 	{% if nodes %}
-	{% recursetree nodes %}
-
-	<div class="row comment-row">
-		<div class='col-lg-{{ "12"|subtract:node.level }} col-lg-offset-{{ node.level }}'>
-			<div class="well col-lg-12">
-				<p>
-					<span class="comment-id"><a href="#">#{{ node.pk }}</a></span>
-					<span class="comment-author"><a href='{% url "user" node.author.username %}'>{{ node.author.username }}</a></span>
-					<span class="comment-date">{{ node.created|naturaltime }}</span>
-					{% if user.is_authenticated %}
-					{% if node.level < 3 %}
-					<span class="comment-reply"><a href="#" id="node_{{ node.pk }}">reply</a></span>
-					{% endif %}
-					{% endif %}
-				</p>
-				{{ node.content }}
+		{% recursetree nodes %}
+	
+		<div class="row comment-row">
+			<div class='col-lg-{{ "12"|subtract:node.level }} col-lg-offset-{{ node.level }}'>
+				<div class="well col-lg-12">
+					<p>
+						<span class="comment-id"><a href="#">#{{ node.pk }}</a></span>
+						<span class="comment-author"><a href='{% url "user" node.author.username %}'>{{ node.author.username }}</a></span>
+						<span class="comment-date">{{ node.created|naturaltime }}</span>
+						{% if user.is_authenticated %}
+							{% if node.level < 3 %}
+								<span class="comment-reply"><a href="#" id="node_{{ node.pk }}">reply</a></span>
+							{% endif %}
+						{% endif %}
+					</p>
+					{{ node.content }}
+				</div>
 			</div>
 		</div>
-	</div>
-
-	{% if not node.is_leaf_node %}
-	{{ children }}
-	{% endif %}
-
-	{% endrecursetree %}
+	
+		{% if not node.is_leaf_node %}
+			{{ children }}
+		{% endif %}
+	
+		{% endrecursetree %}
 	{% endif %}
 </section>
 
 {% if user.is_authenticated %}
 <div class="well bs-component col-lg-12" id="comment_form">
-	<form class="form-horizontal" method="post">
-		{% csrf_token %}
+	<form class="form-horizontal" method="post">{% csrf_token %}
 		<fieldset>
-			{% if form.non_field_errors %}
-			<div class="alert alert-dismissable alert-danger">
-				{% for error in form.non_field_errors %}
-				<p>
-					{{ error | escape }}
-				</p>
-				{% endfor %}
-			</div>
-			{% endif %}
+			{% include "messages.html" with messages=form.non_field_errors type='danger' %}
 
 			{% if success and success.strip %}
 			<div class="alert alert-dismissable alert-success">
@@ -68,20 +59,13 @@
 			<legend>
 				Add new comment
 			</legend>
-			{% for field in form %}
-			<div class="form-group{% if field.errors %} has-error{% endif %}">
-				<div class="col-lg-12">
-					{{ field | add_class:"form-control" }}
-					{% for error in field.errors %}
-					<span class="help-block">{{ error|escape }}</span>
-					{% endfor %}
-				</div>
-			</div>
-			{% endfor %}
+			
+			{% include "fields.html" with fields=form %}
+			
 			<div class="form-group">
 				<div class="col-lg-10 col-lg-offset-0">
 					<button id="comment_submit" type="submit" class="btn btn-primary">
-						Submit
+						Add comment
 					</button>
 					<a href="#" id="cancel_reply">Cancel</a>
 				</div>
