Add social auth to registration.html

--- a/src/templates/users/registration.html
+++ b/src/templates/users/registration.html
@@ -4,16 +4,21 @@
 
 {% block content %}
 
-	<div class="well bs-component">
-		<form method="post" class="form-horizontal">{% csrf_token %}
+{% load staticfiles %}
+
+<div class="well bs-component">
+	<div class="row">
+		
+		<form method="post" class="form-horizontal">
+			{% csrf_token %}
 			{% include "messages.html" with messages=form.non_field_errors type='danger' %}
 			<fieldset>
 				<legend>
 					Sign in
 				</legend>
-				
+				<div class="col-lg-8">
 				{% include "fields.html" with fields=form %}
-				
+
 				<div class="form-group">
 					<div class="col-lg-10 col-lg-offset-3">
 						<button type="submit" class="btn btn-primary">
@@ -21,8 +26,15 @@
 						</button>
 					</div>
 				</div>
+				</div>
+				<div class="col-lg-4">
+					<p>Use your existing account from...</p>
+					<p><a href="{% url 'socialauth_begin' 'facebook' %}"><img src="{% static 'images/fb-login.png' %}" alt="Login with facebook" /></a></p>
+				</div>
 			</fieldset>
 		</form>
+		
 	</div>
-	
+</div>
+
 {% endblock %}
