According to e2572ee1ae69ebdb290f020775917e331ef8a66d - fix comment form template and add hashids requirement

--- a/src/templates/pastes/comments.html
+++ b/src/templates/pastes/comments.html
@@ -60,7 +60,7 @@
 				Add new comment
 			</legend>
 			
-			{% include "fields.html" with fields=form %}
+			{% include "fields_comment.html" with fields=form %}
 			
 			<div class="form-group">
 				<div class="col-lg-10 col-lg-offset-0">
