Fix paste IntegrityError, fix tests, add facebook social auth hash hack

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -18,6 +18,12 @@
 		<link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
 		<link rel="stylesheet" href="{% static "css/bootstrap-extend.css" %}">
 		<link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
+		
+		<script type="text/javascript">
+		   if (window.location.hash == '#_=_') {
+		      window.location.hash = '';
+		   }
+		</script>
 
 		<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 	</head>
