--- a/src/templates/pastes/comments.html
+++ b/src/templates/pastes/comments.html
@@ -29,7 +29,7 @@
 							{% endif %}
 						{% endif %}
 					</p>
-					{{ node.content }}
+					{{ node.get_content }}
 				</div>
 			</div>
 		</div>
